tests/interpreter/errors/invalid_operator.mochi
let x: any = 1
let y: any = "two"
print(x + y)
